@@ -17,7 +17,7 @@ To create and publish the package for MacOSX you need to be on a
 real Mac and type the following command(s)::
 
 	./MacOS/makepkg.py &&
-	scp dist/neubot-0.4.2-rc5.pkg.tgz releases.neubot.org:rc/
+	scp dist/neubot-0.4.2-rc6.pkg.tgz releases.neubot.org:rc/
 
 
 Testing under Ubuntu
@@ -32,8 +32,8 @@ be sure::
 Download and update to the latest package, make sure it is running
 and then open the web user interface::
 
-	wget http://releases.neubot.org/rc/neubot-0.4.2-rc5-1_all.deb &&
-	sudo dpkg -i neubot-0.4.2-rc5-1_all.deb &&
+	wget http://releases.neubot.org/rc/neubot-0.4.2-rc6-1_all.deb &&
+	sudo dpkg -i neubot-0.4.2-rc6-1_all.deb &&
 	wget -O- 'http://127.0.0.1:9774/api/state?debug=1' &&
 	wget -O- http://127.0.0.1:9774/api/debug &&
 	neubot -V && neubot
@@ -70,7 +70,7 @@ make sure they work and then close your private neubot instance::
 Reinstall the package over itself to make sure that future updates are
 going to work (we must test the uninstall script of the new package)::
 
-	sudo dpkg -i neubot-0.4.2-rc5-1_all.deb &&
+	sudo dpkg -i neubot-0.4.2-rc6-1_all.deb &&
 	wget -O- 'http://127.0.0.1:9774/api/state?debug=1' &&
 	wget -O- http://127.0.0.1:9774/api/debug &&
 	neubot -V && neubot
@@ -81,7 +81,7 @@ the uninstall script correctly tears down the icon before uninstalling
 Neubot.
 
 	neubot statusicon &&
-	sudo dpkg -i neubot-0.4.2-rc5-1_all.deb &&
+	sudo dpkg -i neubot-0.4.2-rc6-1_all.deb &&
 	wget -O- 'http://127.0.0.1:9774/api/state?debug=1' &&
 	wget -O- http://127.0.0.1:9774/api/debug &&
 	neubot -V && neubot
