@@ -51,7 +51,7 @@
     <script type="text/javascript" src="js/contrib.js"></script>
     <script type="text/javascript" src="js/i18n.js"></script>
 
-    <title>Neubot 0.4.2-rc5 | Web interface</title>
+    <title>Neubot 0.4.2-rc6 | Web interface</title>
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" media='screen' type="text/css" href="css/jquery.jqplot.css" />
